# DMarkPlayer

./: README.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/mark/cyberpunkplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  nativelib.cpp
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/cpp/player/: FFDemux.cpp  FFdecode.cpp  GLVideoView.cpp  IDecode.cpp  IDemux.cpp  IObserver.cpp  IPlayer.cpp  IPlayerPorxy.cpp  IPlayerPorxy.h  SLAudioPlay.cpp
app/src/main/java/com/mark/cyberpunkplayer/: GLRender.java
app/src/main/java/org/cybergarage/http/: HTTPServer.java  HTTPServerList.java  (+2 more)
app/src/main/res/anim/: fragment_slide_left_enter.xml  fragment_slide_right_exit.xml  reflash_spin.xml
app/src/main/res/drawable/: audio_left.xml  audio_player.xml  audiopause.xml  ic_man.xml  icon_disk.xml  red_rad_bg.xml  reflesh_an.xml  select_file_button_click.xml  svg_like.xml
app/src/main/res/layout/: activity_new_session.xml  activity_safe_box.xml  fragment_local_net_res.xml  fragment_local_pic.xml  include_audio_player.xml  include_player_bottom_nv.xml  item_bt.xml  item_rv_loading.xml  player_home.xml  popwinodw_item_local_video.xml  view_server_contorl.xml
app/src/main/res/menu/: menu_navigation.xml  toolbar_local_pic_menu.xml
app/src/main/res/transition/: transition_to_left.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-sw1024dp/: dimens.xml
app/src/main/res/values-sw1280dp/: dimens.xml
app/src/main/res/values-sw1365dp/: dimens.xml
app/src/main/res/values-sw384dp/: dimens.xml
app/src/main/res/values-sw392dp/: dimens.xml
app/src/main/res/values-sw400dp/: dimens.xml
app/src/main/res/values-sw410dp/: dimens.xml
app/src/main/res/values-sw411dp/: dimens.xml
app/src/main/res/values-sw432dp/: dimens.xml
app/src/main/res/values-sw480dp/: dimens.xml
app/src/main/res/values-sw533dp/: dimens.xml
app/src/main/res/values-sw592dp/: dimens.xml
app/src/main/res/values-sw600dp/: dimens.xml
app/src/main/res/values-sw640dp/: dimens.xml
app/src/main/res/values-sw662dp/: dimens.xml
app/src/main/res/values-sw720dp/: dimens.xml
app/src/main/res/values-sw768dp/: dimens.xml
app/src/main/res/values-sw800dp/: dimens.xml
app/src/main/res/values-sw811dp/: dimens.xml
app/src/main/res/values-sw820dp/: dimens.xml
app/src/main/res/values-sw960dp/: dimens.xml
app/src/main/res/values-sw961dp/: dimens.xml
gradle/wrapper/: gradle-wrapper.properties
(+118 files in other folders)
